Upgrade Minecraft to 1.19